--- a/src/Makefile
+++ b/src/Makefile
@@ -7,7 +7,7 @@ LIBS = -L/usr/local/lib  -L/usr/local/lib
 ifeq ($(uname_S),Linux)
 	LINK = -lrt 
 endif
-CFLAGS = -g -std=gnu99 -Wall -fno-strict-aliasing -O2 -c $(INCLUDES) 
+CFLAGS = -g -std=gnu99 -Wall -fno-strict-aliasing  -c $(INCLUDES) 
 OFLAGS = $(LIBS) $(LINK)
 
 SRCDIR = .
